%% Crispy CRM Database ERD
%% Generated: 2025-12-08 (via Supabase MCP)
%% Tables: 24 | Enums: 14 | Foreign Keys: 69+

erDiagram
    %% ==========================================
    %% CORE ENTITIES
    %% ==========================================

    organizations {
        bigint id PK "auto-increment"
        text name "NOT NULL"
        organization_type organization_type "customer|principal|distributor|prospect"
        varchar priority "A|B|C|D, DEFAULT 'C'"
        text website
        text address
        text city
        text state
        text postal_code
        text phone
        text email
        text logo_url
        text linkedin_url
        integer employee_count
        integer founded_year
        text notes
        bigint sales_id FK
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        bigint created_by FK
        bigint updated_by FK
        timestamptz deleted_at "soft delete"
        uuid import_session_id
        tsvector search_tsv
        jsonb context_links
        text description
        text tax_identifier
        uuid segment_id FK "operator segment"
        uuid playbook_category_id FK "playbook segment"
        text cuisine "restaurant cuisine type"
        text needs_review "review flag with reason"
        bigint parent_organization_id FK "self-ref hierarchy"
    }

    segments {
        uuid id PK "gen_random_uuid()"
        text name "NOT NULL"
        text segment_type "playbook|operator"
        integer display_order "DEFAULT 0"
        uuid parent_id FK "self-ref hierarchy"
        text ui_group "Commercial|Institutional"
        timestamptz created_at "DEFAULT now()"
        uuid created_by FK
        timestamptz deleted_at "soft delete"
    }

    contacts {
        bigint id PK "auto-increment"
        text name "NOT NULL"
        text first_name
        text last_name
        jsonb email "DEFAULT '[]'"
        jsonb phone "DEFAULT '[]'"
        text title
        text department
        text address
        text city
        text state
        text postal_code
        text country "DEFAULT 'USA'"
        date birthday
        text linkedin_url
        text twitter_handle
        text notes
        text status "cold|warm|hot|in-contract"
        text gender
        bigint_array tags "DEFAULT '{}'"
        bigint organization_id FK "NOT NULL, RESTRICT"
        bigint sales_id FK
        bigint created_by FK
        bigint updated_by FK
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz first_seen "DEFAULT now()"
        timestamptz last_seen "DEFAULT now()"
        timestamptz deleted_at "soft delete"
        tsvector search_tsv
    }

    sales {
        bigint id PK "auto-increment"
        uuid user_id UK "FK auth.users"
        text first_name
        text last_name
        text email
        text phone
        text avatar_url
        user_role role "admin|manager|rep"
        boolean administrator "computed from role"
        boolean is_admin "DEPRECATED"
        boolean disabled "account disabled flag"
        boolean digest_opt_in "DEFAULT true"
        text timezone "DEFAULT 'America/Chicago'"
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    %% ==========================================
    %% SALES & CRM
    %% ==========================================

    opportunities {
        bigint id PK "auto-increment"
        text name "NOT NULL"
        text description
        opportunity_stage stage "7 stages"
        opportunity_status status "active|on_hold|nurturing|stalled|expired"
        priority_level priority "low|medium|high|critical"
        integer index
        date estimated_close_date "DEFAULT +90 days"
        date actual_close_date
        timestamptz stage_changed_at "DEFAULT now()"
        bigint customer_organization_id FK "NOT NULL, RESTRICT"
        bigint principal_organization_id FK
        bigint distributor_organization_id FK
        bigint opportunity_owner_id FK "NOT NULL"
        bigint account_manager_id FK
        bigint founding_interaction_id FK
        bigint related_opportunity_id FK "self-ref"
        bigint_array contact_ids "DEPRECATED - use junction"
        text next_action
        date next_action_date
        text competition
        text decision_criteria
        text notes
        text campaign
        text_array tags "DEFAULT '{}'"
        text lead_source "referral|trade_show|website|cold_call|..."
        win_reason win_reason "required when closed_won"
        loss_reason loss_reason "required when closed_lost"
        text close_reason_notes "max 500 chars"
        bigint created_by FK
        bigint updated_by FK
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
        tsvector search_tsv
    }

    activities {
        bigint id PK "auto-increment"
        activity_type activity_type "engagement|interaction"
        interaction_type type "call|email|meeting|demo|sample|..."
        text subject "NOT NULL"
        text description
        timestamptz activity_date "DEFAULT now()"
        integer duration_minutes
        text outcome
        varchar sentiment "positive|neutral|negative"
        text location
        text_array attendees
        text_array attachments
        text_array tags
        boolean follow_up_required "DEFAULT false"
        date follow_up_date
        text follow_up_notes
        sample_status sample_status "for type=sample"
        bigint contact_id FK "CASCADE"
        bigint organization_id FK
        bigint opportunity_id FK
        bigint related_task_id FK
        bigint created_by FK
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    tasks {
        bigint id PK "auto-increment"
        text title "NOT NULL"
        text description
        task_type type "Call|Email|Meeting|Follow-up|Demo|Proposal|Other"
        priority_level priority "DEFAULT 'medium'"
        date due_date
        date reminder_date
        timestamptz snooze_until
        boolean completed "DEFAULT false"
        timestamptz completed_at
        timestamptz overdue_notified_at
        bigint sales_id FK "NOT NULL - task owner"
        bigint contact_id FK "CASCADE"
        bigint organization_id FK
        bigint opportunity_id FK
        bigint created_by FK "DEFAULT get_current_sales_id()"
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    products {
        bigint id PK "auto-increment"
        text name "NOT NULL"
        text category "NOT NULL, CHECK not empty"
        text sku
        text description
        text manufacturer_part_number
        product_status status "active|discontinued|seasonal|..."
        bigint principal_id FK "NOT NULL"
        bigint distributor_id FK
        bigint created_by FK
        bigint updated_by FK
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
        tsvector search_tsv
    }

    %% ==========================================
    %% JUNCTION TABLES
    %% ==========================================

    organization_distributors {
        bigint id PK "IDENTITY ALWAYS"
        bigint organization_id FK "NOT NULL, CASCADE"
        bigint distributor_id FK "NOT NULL, CASCADE"
        boolean is_primary "DEFAULT false"
        text notes
        bigint created_by FK
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    opportunity_contacts {
        bigint id PK "IDENTITY ALWAYS"
        bigint opportunity_id FK "CASCADE"
        bigint contact_id FK "CASCADE"
        varchar role
        boolean is_primary "DEFAULT false"
        text notes
        timestamptz created_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    opportunity_products {
        bigint id PK "auto-increment"
        bigint opportunity_id FK "CASCADE"
        bigint product_id_reference FK "CASCADE"
        text product_name
        text product_category
        text notes
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    opportunity_participants {
        bigint id PK "auto-increment"
        bigint opportunity_id FK "CASCADE"
        bigint organization_id FK
        varchar role "customer|principal|distributor|competitor"
        boolean is_primary "DEFAULT false"
        text notes
        bigint created_by FK
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    interaction_participants {
        bigint id PK "auto-increment"
        bigint activity_id FK "CASCADE"
        bigint contact_id FK
        bigint organization_id FK
        varchar role "DEFAULT 'participant'"
        text notes
        bigint created_by FK
        timestamptz created_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    distributor_principal_authorizations {
        bigint id PK "IDENTITY ALWAYS"
        bigint distributor_id FK "CASCADE"
        bigint principal_id FK "CASCADE"
        boolean is_authorized "DEFAULT true"
        date authorization_date "DEFAULT CURRENT_DATE"
        date expiration_date
        text_array territory_restrictions
        text notes
        bigint created_by FK
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    product_distributor_authorizations {
        bigint id PK "IDENTITY ALWAYS"
        bigint product_id FK "CASCADE"
        bigint distributor_id FK "CASCADE"
        boolean is_authorized "DEFAULT true"
        date authorization_date "DEFAULT CURRENT_DATE"
        date expiration_date
        jsonb special_pricing
        text_array territory_restrictions
        text notes
        bigint created_by FK
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    %% ==========================================
    %% NOTES & SUPPORTING
    %% ==========================================

    contact_notes {
        bigint id PK "auto-increment"
        bigint contact_id FK "CASCADE"
        text text "NOT NULL"
        text_array attachments
        timestamptz date "DEFAULT now()"
        bigint sales_id FK
        bigint created_by FK "DEFAULT get_current_sales_id()"
        bigint updated_by FK
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    organization_notes {
        bigint id PK "auto-increment"
        bigint organization_id FK "CASCADE"
        text text "NOT NULL"
        jsonb attachments "DEFAULT '[]'"
        timestamptz date "DEFAULT now()"
        bigint sales_id FK
        bigint updated_by FK
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    opportunity_notes {
        bigint id PK "auto-increment"
        bigint opportunity_id FK "CASCADE"
        text text "NOT NULL"
        text_array attachments
        timestamptz date "DEFAULT now()"
        bigint sales_id FK
        bigint created_by FK "DEFAULT get_current_sales_id()"
        bigint updated_by FK
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    audit_trail {
        bigint audit_id PK "IDENTITY ALWAYS"
        text table_name "NOT NULL"
        bigint record_id "NOT NULL"
        text field_name "NOT NULL"
        text old_value
        text new_value
        bigint changed_by FK
        timestamptz changed_at "DEFAULT now()"
    }

    notifications {
        bigint id PK "IDENTITY ALWAYS"
        uuid user_id FK "auth.users"
        text type "task_overdue|task_assigned|mention|daily_digest|..."
        text message "NOT NULL"
        text entity_type "task|opportunity|contact|organization|product|digest"
        bigint entity_id
        jsonb metadata
        boolean read "DEFAULT false"
        timestamptz created_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    tags {
        bigint id PK "auto-increment"
        text name "UNIQUE, NOT NULL"
        text color "DEFAULT 'blue-500'"
        text description
        integer usage_count "DEFAULT 0"
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
        timestamptz deleted_at "soft delete"
    }

    tutorial_progress {
        bigint id PK "IDENTITY BY DEFAULT"
        bigint sales_id FK UK "one per user"
        boolean organization_completed "DEFAULT false"
        boolean contact_completed "DEFAULT false"
        boolean opportunity_completed "DEFAULT false"
        boolean activity_completed "DEFAULT false"
        boolean task_completed "DEFAULT false"
        boolean dismissed "DEFAULT false"
        timestamptz dismissed_at
        bigint created_organization_id FK
        bigint created_contact_id FK
        bigint created_opportunity_id FK
        bigint created_activity_id FK
        bigint created_task_id FK
        timestamptz created_at "DEFAULT now()"
        timestamptz updated_at "DEFAULT now()"
    }

    test_user_metadata {
        uuid id PK "gen_random_uuid()"
        uuid user_id FK UK "auth.users"
        text role "admin|sales_director|account_manager"
        text created_by "DEFAULT 'automated_script'"
        jsonb test_data_counts
        timestamptz created_at "DEFAULT now()"
        timestamptz last_sync_at
    }

    migration_history {
        bigint id PK "auto-increment"
        text phase_number "NOT NULL"
        text phase_name "NOT NULL"
        text status "DEFAULT 'pending'"
        timestamptz started_at
        timestamptz completed_at
        text error_message
        text rollback_sql
        bigint rows_affected
        timestamptz created_at "DEFAULT now()"
    }

    %% ==========================================
    %% RELATIONSHIPS
    %% ==========================================

    %% Segments (self-referencing hierarchy)
    segments ||--o{ segments : "parent_id"

    %% Organizations core relationships
    segments ||--o{ organizations : "segment_id"
    segments ||--o{ organizations : "playbook_category_id"
    organizations ||--o{ organizations : "parent_organization_id"
    sales ||--o{ organizations : "sales_id"
    sales ||--o{ organizations : "created_by"
    sales ||--o{ organizations : "updated_by"

    %% Contacts (required org relationship)
    organizations ||--o{ contacts : "organization_id (RESTRICT)"
    sales ||--o{ contacts : "sales_id"
    sales ||--o{ contacts : "created_by"
    sales ||--o{ contacts : "updated_by"

    %% Organization Distributors (M:M via junction)
    organizations ||--o{ organization_distributors : "organization_id (CASCADE)"
    organizations ||--o{ organization_distributors : "distributor_id (CASCADE)"
    sales ||--o{ organization_distributors : "created_by"

    %% Opportunities
    organizations ||--o{ opportunities : "customer_organization_id (RESTRICT)"
    organizations ||--o{ opportunities : "principal_organization_id"
    organizations ||--o{ opportunities : "distributor_organization_id"
    sales ||--o{ opportunities : "opportunity_owner_id"
    sales ||--o{ opportunities : "account_manager_id"
    sales ||--o{ opportunities : "created_by"
    sales ||--o{ opportunities : "updated_by"
    activities ||--o| opportunities : "founding_interaction_id"
    opportunities ||--o{ opportunities : "related_opportunity_id"

    %% Activities
    contacts ||--o{ activities : "contact_id (CASCADE)"
    organizations ||--o{ activities : "organization_id"
    opportunities ||--o{ activities : "opportunity_id"
    tasks ||--o{ activities : "related_task_id"
    sales ||--o{ activities : "created_by"

    %% Tasks
    sales ||--o{ tasks : "sales_id (owner)"
    contacts ||--o{ tasks : "contact_id (CASCADE)"
    organizations ||--o{ tasks : "organization_id"
    opportunities ||--o{ tasks : "opportunity_id"
    sales ||--o{ tasks : "created_by"

    %% Products
    organizations ||--o{ products : "distributor_id"
    sales ||--o{ products : "created_by"
    sales ||--o{ products : "updated_by"

    %% Junction tables
    opportunities ||--o{ opportunity_contacts : "CASCADE"
    contacts ||--o{ opportunity_contacts : "CASCADE"
    opportunities ||--o{ opportunity_products : "CASCADE"
    products ||--o{ opportunity_products : "CASCADE"
    opportunities ||--o{ opportunity_participants : "CASCADE"
    activities ||--o{ interaction_participants : "CASCADE"
    contacts ||--o{ interaction_participants : ""
    organizations ||--o{ distributor_principal_authorizations : "distributor_id (CASCADE)"
    organizations ||--o{ distributor_principal_authorizations : "principal_id (CASCADE)"
    products ||--o{ product_distributor_authorizations : "CASCADE"
    organizations ||--o{ product_distributor_authorizations : "distributor_id (CASCADE)"

    %% Notes
    contacts ||--o{ contact_notes : "CASCADE"
    sales ||--o{ contact_notes : "sales_id"
    organizations ||--o{ organization_notes : "CASCADE"
    opportunities ||--o{ opportunity_notes : "CASCADE"
    sales ||--o{ opportunity_notes : "sales_id"

    %% Audit & Notifications
    sales ||--o{ audit_trail : "changed_by"

    %% Tutorial
    sales ||--o| tutorial_progress : "sales_id (one per user)"
    organizations ||--o{ tutorial_progress : "created_organization_id"
    contacts ||--o{ tutorial_progress : "created_contact_id"
    opportunities ||--o{ tutorial_progress : "created_opportunity_id"
    activities ||--o{ tutorial_progress : "created_activity_id"
    tasks ||--o{ tutorial_progress : "created_task_id"
